[package]
name = "iloader-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iloader"
path = "src/main.rs"

[dependencies]
# Backend principal
isideload = { git = "https://github.com/espinosalastres-del/isideload.git", branch = "main" }

# Mantener la misma versión que usa isideload
idevice = "0.1.61"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }

# Serialización
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Errores
thiserror = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
